--- a/experience.html
+++ b/experience.html
@@ -19,7 +19,7 @@ title: Experience
                         <img class="img-fluid" src="{{ site.baseurl }}/assets/images/jobs/{{ job.image }}" alt="{{ job.image }}" height="100px" width="100px">
                     </div>
                     <div class="col-sm-11 col-md-11 col-lg-11">
-                        <h2><a href="{{ job.url }}">{{ job.job_title }}</a></h2>
+                        <h2><a href="{{ site.baseurl }}{{ job.url }}">{{ job.job_title }}</a></h2>
                         <h4>{{ job.name }}</h4>
                         <p>{{ job.start_date | date: "%B %Y" }} - {{ job.end_date | date: "%B %Y"}}</p>
                         <p>{{ job.excerpt | markdownify }}</p>
