--- a/404.html
+++ b/404.html
@@ -8,3 +8,9 @@ permalink: /404.html
     <h1 class="display-1">404</h1>
     <p>Page not found <i class="bi bi-emoji-frown"></i></p>
 </div>
+<div class="">
+    <img class="img-fluid" src="{{ site.baseurl }}/assets/images/404.jpg" alt="404 Page Not Found">
+</div>
+<div class="">
+    Photo by <a href="https://unsplash.com/@woodies11?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Romson Preechawit</a> on <a href="https://unsplash.com/s/photos/404?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
+</div>
