--- a/404.html
+++ b/404.html
@@ -6,7 +6,7 @@ permalink: /404.html
 
 <div class="mt-1 text-center">
     <h1 class="display-1">404</h1>
-    <p>Page not found <i class="bi bi-emoji-frown"></i></p>
+    <h4 class="text-secondary">Page not found <i class="bi bi-emoji-frown"></i></h4>
 </div>
 <div class="">
     <img class="img-fluid" src="{{ site.baseurl }}/assets/images/404.jpg" alt="404 Page Not Found">
