--- a/blog.html
+++ b/blog.html
@@ -17,6 +17,7 @@ title: Blog
                     <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
                     <p>{{ post.date | date_to_string }}</p>
                     <p>{{ post.excerpt | markdownify }}</p>
+                    <p><a href="{{ site.baseurl }}{{ post.url }}">Read More</a></p>
                 </div>
                 <hr>
             </li>
