--- a/certificates.html
+++ b/certificates.html
@@ -11,13 +11,16 @@ title: Certificates
 <div class="row">
     {% assign certificates = site.certificates | sort: 'date' | reverse %}
     {% for certificate in certificates %}
-    <div class="col-sm-4 col-md-4 col-lg-4">
+    <div class="col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch">
         <div class="card" style="width: 18rem;">
             <img class="card-img-top" src="{{ site.baseurl }}/assets/images/certificates/{{ certificate.image }}" alt="Image of {{ certificate.short_name }}">
             <div class="card-body">
                 <h5 class="card-title">{{ certificate.name }}</h5>
-                <p class="card-text">Issued {{ certificate.date | date: "%B %Y" }}</p>
-                <a href="{{ site.baseurl }}{{ certificate.url }}" class="btn btn-primary">Read More</a>
+                <hr>
+                <p class="card-text text-center">Issued {{ certificate.date | date: "%B %Y" }}</p>
+            </div>
+            <div class="card-body d-flex flex-column">
+                <a href="{{ site.baseurl }}{{ certificate.url }}" class="btn btn-primary mt-auto">Read More</a>
             </div>
         </div>
     </div>
