--- a/certificates.html
+++ b/certificates.html
@@ -11,13 +11,15 @@ title: Certificates
 <div class="row">
     {% assign certificates = site.certificates | sort: 'date' | reverse %}
     {% for certificate in certificates %}
-        <div class="col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch">
+        <div class="col-sm-4 col-md-4 col-lg-4 d-flex align-items-stretch mt-4">
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ site.baseurl }}/assets/images/certificates/{{ certificate.image }}" alt="Image of {{ certificate.short_name }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ certificate.name }}</h5>
-                    <hr>
-                    <p class="card-text text-center">Issued {{ certificate.date | date: "%B %Y" }}</p>
+                    <div class="d-flex flex-column mt-auto">
+                        <hr>
+                        <p class="card-text text-center">Issued {{ certificate.date | date: "%B %Y" }}</p>
+                    </div>
                 </div>
                 <div class="card-body d-flex flex-column">
                     <a href="{{ site.baseurl }}{{ certificate.url }}" class="btn btn-primary mt-auto">Read More</a>
