--- a/certificates.html
+++ b/certificates.html
@@ -15,9 +15,9 @@ title: Certificates
             <div class="card" style="width: 18rem;">
                 <img class="card-img-top" src="{{ site.baseurl }}/assets/images/certificates/{{ certificate.image }}" alt="Image of {{ certificate.short_name }}">
                 <div class="card-body">
-                    <h5 class="card-title">{{ certificate.name }}</h5>
+                    <span class="badge badge-pill badge-light mb-1">{{ certificate.date | date: "%b %Y" }}</span>
                     <hr>
-                    <p class="card-text text-center">Issued {{ certificate.date | date: "%B %Y" }}</p>
+                    <h5 class="card-title">{{ certificate.name }}</h5>
                 </div>
                 <div class="card-body d-flex flex-column">
                     <a href="{{ site.baseurl }}{{ certificate.url }}" class="btn btn-primary mt-auto">Read More</a>
