--- a/blog.html
+++ b/blog.html
@@ -15,7 +15,7 @@ title: Blog
             <li>
                 <div class="">
                     <h2><a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></h2>
-                    <p>{{ post.date | date_to_string }}</p>
+                    <p>{{ post.date | date: "%-d %B %Y" }}</p>
                     <p>{{ post.excerpt | markdownify }}</p>
                     <p><a href="{{ site.baseurl }}{{ post.url }}">Read More</a></p>
                 </div>
