--- a/education.html
+++ b/education.html
@@ -19,7 +19,7 @@ title: Education
                         <img class="img-fluid" src="{{ site.baseurl }}/assets/images/university/{{ degree.image }}" alt="{{ job.image }}" height="100px" width="100px">
                     </div>
                     <div class="col-sm-11 col-md-11 col-lg-11">
-                        <h2><a href="{{ site.baseurl }}{{ degree.url }}">{{ degree.university }}</a></h2>
+                        <h2 class="page-title"><a href="{{ site.baseurl }}{{ degree.url }}">{{ degree.university }}</a></h2>
                         <h4>{{ degree.degree_title }}</h4>
                         <h6>{{ degree.stream }}</h6>
                         <p>{{ degree.start_date | date: "%Y" }} - {{ degree.end_date | date: "%Y"}}</p>
